# flask_sqlite_datatable_js_and_live_update_data

./: README.md  app.py  database.db  pyproject.toml
templates/: index.html
