[tool.poetry]
name = "flask_datatable_js_example"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.1"
Faker = "^8.13.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"